Story #3189077 - upgraded to java 21 + upgraded libraries + fixed tests