@@ -125,7 +125,7 @@ public class EntityDTOTests {
     public void testParseOctaneBulkException() {
         String json = "{\"total_count\":0,\"data\":[],\"exceeds_total_count\":false,\"errors\":[{\"error_code\":\"platform.unknown_field\",\"correlation_id\":\"o5jp1y5576mo0tdyd60g7n2v6\",\"description\":\"The entity type 'defect' does not have a field/s by name/s 'sss'\",\"description_translated\":\"The entity type 'defect' does not have a field/s by name/s 'sss'\",\"properties\":{\"entity_type\":\"defect\",\"field_name\":\"sss\"},\"stack_trace\":\"com.hp.mqm.bl.platform.exception.NonExistingFieldException\",\"business_error\":true}]}";
         OctaneBulkExceptionData octaneException = dtoFactory.dtoFromJson(json, OctaneBulkExceptionData.class);
-        Assert.assertEquals("platform.unknown_field", octaneException.getErrors().get(0).getErrorCode());
+        Assert.assertEquals("platform.unknown_field", octaneException.getErrors().getFirst().getErrorCode());
     }
 
 
