@@ -40,7 +40,7 @@ public class OctaneBulkException extends RuntimeException {
 
     public OctaneBulkException(int responseStatus, OctaneBulkExceptionData data) {
         super(data.getErrors().size() == 1
-                ? data.getErrors().get(0).getDescription()
+                ? data.getErrors().getFirst().getDescription()
                 : data.getErrors().size() + " exceptions occurred on Octane side.");
         this.data = data;
         this.responseStatus = responseStatus;
